fixed alignment of footer items and flyer text

--- a/travelfly-homepage-responsive/css/styles.css
+++ b/travelfly-homepage-responsive/css/styles.css
@@ -150,12 +150,24 @@ nav {
     margin-top: -35px;
     border: solid 1px black; }
     .flyer .country span {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
       text-transform: lowercase;
       font-size: 30px;
-      font-family: "Roboto", sans-serif; }
-    .flyer .country p {
       font-family: "Roboto", sans-serif;
-      font-size: 40px; }
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; }
+    .flyer .country p {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      font-family: "Roboto", sans-serif;
+      font-size: 40px;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; }
     .flyer .country .flyer-button {
       text-decoration: none;
       color: #ffffff;
@@ -317,13 +329,14 @@ nav {
     text-decoration: none;
     color: #ffffff;
     text-transform: uppercase; }
-  .form .message input {
+  .form .message textarea {
     width: 818px;
     height: 192px;
     font-family: "Lato", sans-serif;
     font-size: 18px;
     color: #000000;
-    margin-bottom: 25px; }
+    margin-bottom: 25px;
+    border-color: #79addc; }
 
 * {
   margin: 0;
@@ -351,9 +364,8 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -365,18 +377,26 @@ p {
     background-image: url("../images/logo/logo-white.svg");
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat; }
+    background-repeat: no-repeat;
+    margin-left: 300px; }
   .footer .copyright {
-    margin: 15px; }
+    margin: 15px;
+    color: #ffffff;
+    font-family: "Lato", sans-serif;
+    font-size: 12px; }
   .footer .social-media {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    width: 112px;
     height: 23px;
-    margin-right: -500px; }
+    margin-right: 300px; }
+    .footer .social-media .icon {
+      font-size: 23px;
+      color: #ffffff; }
